syntax = "proto3";

package example.how-to-go.v1.foo;

service FooService {
    rpc reverse (ReverseRequest) return (ReverseResponse);
}

message ReverseRequest {
    string text = 1;
}

message ReverseResponse {
    string reversed_text = 1;
}